[gd_scene load_steps=16 format=2]

[ext_resource path="res://assets/images/icons/buttons/key.esc.svg" type="Texture" id=1]
[ext_resource path="res://assets/images/icons/buttons/key.enter.svg" type="Texture" id=2]
[ext_resource path="res://assets/images/icons/buttons/key.move.svg" type="Texture" id=3]
[ext_resource path="res://assets/fonts/Rubik-Bold.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://assets/themes/settings_label.tres" type="Theme" id=5]
[ext_resource path="res://scenes/Settings/Settings.gd" type="Script" id=6]
[ext_resource path="res://assets/themes/Settings-buttons.tres" type="Theme" id=7]
[ext_resource path="res://assets/themes/buttons-red.tres" type="Theme" id=8]
[ext_resource path="res://assets/themes/Settings-panel.tres" type="Theme" id=9]

[sub_resource type="DynamicFont" id=10]
size = 70
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxFlat" id=9]
draw_center = false

[sub_resource type="DynamicFont" id=12]
size = 70
font_data = ExtResource( 4 )

[sub_resource type="Theme" id=8]
default_font = SubResource( 12 )

[sub_resource type="DynamicFont" id=13]
size = 45
font_data = ExtResource( 4 )

[sub_resource type="Theme" id=4]
default_font = SubResource( 13 )

[node name="Settings" type="VBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 6 )

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_right = 2131.0
margin_bottom = 906.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 5

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer"]
margin_right = 2126.0
margin_bottom = 906.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 7 )
follow_focus = true
scroll_horizontal_enabled = false

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/ScrollContainer"]
margin_right = 2114.0
margin_bottom = 1408.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Subtitle" type="MarginContainer" parent="MarginContainer/ScrollContainer/VBoxContainer"]
margin_right = 2114.0
margin_bottom = 150.0
custom_constants/margin_right = 20
custom_constants/margin_top = 30
custom_constants/margin_left = 30
custom_constants/margin_bottom = 30

[node name="Label" type="Button" parent="MarginContainer/ScrollContainer/VBoxContainer/Subtitle"]
margin_left = 30.0
margin_top = 30.0
margin_right = 2094.0
margin_bottom = 120.0
custom_colors/font_color_disabled = Color( 0.862745, 1, 0.862745, 1 )
custom_colors/font_color_focus = Color( 0.862745, 1, 0.862745, 1 )
custom_colors/font_color = Color( 0.862745, 1, 0.862745, 1 )
custom_colors/font_color_hover = Color( 0.862745, 1, 0.862745, 1 )
custom_colors/font_color_pressed = Color( 0.862745, 1, 0.862745, 1 )
custom_fonts/font = SubResource( 10 )
custom_styles/focus = SubResource( 9 )
disabled = true
text = "SETTINGS_SCREEN_SOUNS"
flat = true
align = 0

[node name="GeneralVolumeContainer" type="MarginContainer" parent="MarginContainer/ScrollContainer/VBoxContainer"]
margin_top = 154.0
margin_right = 2114.0
margin_bottom = 284.0
custom_constants/margin_right = 15
custom_constants/margin_top = 15
custom_constants/margin_left = 15
custom_constants/margin_bottom = 15

[node name="Panel" type="Panel" parent="MarginContainer/ScrollContainer/VBoxContainer/GeneralVolumeContainer"]
margin_left = 15.0
margin_top = 15.0
margin_right = 2099.0
margin_bottom = 115.0
theme = ExtResource( 9 )

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/ScrollContainer/VBoxContainer/GeneralVolumeContainer"]
margin_left = 15.0
margin_top = 15.0
margin_right = 2099.0
margin_bottom = 115.0
custom_constants/margin_right = 30
custom_constants/margin_top = 20
custom_constants/margin_left = 30
custom_constants/margin_bottom = 20

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/ScrollContainer/VBoxContainer/GeneralVolumeContainer/MarginContainer"]
margin_left = 30.0
margin_top = 20.0
margin_right = 2054.0
margin_bottom = 80.0

[node name="Label" type="Label" parent="MarginContainer/ScrollContainer/VBoxContainer/GeneralVolumeContainer/MarginContainer/HBoxContainer"]
margin_right = 1010.0
margin_bottom = 60.0
size_flags_horizontal = 3
theme = ExtResource( 5 )
text = "SETTINGS_GENERAL_VOLUME"

[node name="General" type="HSlider" parent="MarginContainer/ScrollContainer/VBoxContainer/GeneralVolumeContainer/MarginContainer/HBoxContainer"]
margin_left = 1014.0
margin_right = 2024.0
margin_bottom = 60.0
focus_neighbour_top = NodePath("../../../../Subtitle/Label")
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 7 )
max_value = 1.0
step = 0.02
value = 1.0

[node name="MusicVolumeContainer" type="MarginContainer" parent="MarginContainer/ScrollContainer/VBoxContainer"]
margin_top = 288.0
margin_right = 2114.0
margin_bottom = 418.0
custom_constants/margin_right = 15
custom_constants/margin_top = 15
custom_constants/margin_left = 15
custom_constants/margin_bottom = 15

[node name="Panel" type="Panel" parent="MarginContainer/ScrollContainer/VBoxContainer/MusicVolumeContainer"]
margin_left = 15.0
margin_top = 15.0
margin_right = 2099.0
margin_bottom = 115.0
theme = ExtResource( 9 )

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/ScrollContainer/VBoxContainer/MusicVolumeContainer"]
margin_left = 15.0
margin_top = 15.0
margin_right = 2099.0
margin_bottom = 115.0
custom_constants/margin_right = 30
custom_constants/margin_top = 20
custom_constants/margin_left = 30
custom_constants/margin_bottom = 20

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/ScrollContainer/VBoxContainer/MusicVolumeContainer/MarginContainer"]
margin_left = 30.0
margin_top = 20.0
margin_right = 2054.0
margin_bottom = 80.0

[node name="Label" type="Label" parent="MarginContainer/ScrollContainer/VBoxContainer/MusicVolumeContainer/MarginContainer/HBoxContainer"]
margin_right = 1010.0
margin_bottom = 60.0
size_flags_horizontal = 3
theme = ExtResource( 5 )
text = "SETTINGS_MUSIC_VOLUME"

[node name="Music" type="HSlider" parent="MarginContainer/ScrollContainer/VBoxContainer/MusicVolumeContainer/MarginContainer/HBoxContainer"]
margin_left = 1014.0
margin_right = 2024.0
margin_bottom = 60.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 7 )
max_value = 1.0
step = 0.02
value = 1.0

[node name="SFXVolumeContainer" type="MarginContainer" parent="MarginContainer/ScrollContainer/VBoxContainer"]
margin_top = 422.0
margin_right = 2114.0
margin_bottom = 552.0
custom_constants/margin_right = 15
custom_constants/margin_top = 15
custom_constants/margin_left = 15
custom_constants/margin_bottom = 15

[node name="Panel" type="Panel" parent="MarginContainer/ScrollContainer/VBoxContainer/SFXVolumeContainer"]
margin_left = 15.0
margin_top = 15.0
margin_right = 2099.0
margin_bottom = 115.0
theme = ExtResource( 9 )

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/ScrollContainer/VBoxContainer/SFXVolumeContainer"]
margin_left = 15.0
margin_top = 15.0
margin_right = 2099.0
margin_bottom = 115.0
custom_constants/margin_right = 30
custom_constants/margin_top = 20
custom_constants/margin_left = 30
custom_constants/margin_bottom = 20

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/ScrollContainer/VBoxContainer/SFXVolumeContainer/MarginContainer"]
margin_left = 30.0
margin_top = 20.0
margin_right = 2054.0
margin_bottom = 80.0

[node name="Label" type="Label" parent="MarginContainer/ScrollContainer/VBoxContainer/SFXVolumeContainer/MarginContainer/HBoxContainer"]
margin_right = 1010.0
margin_bottom = 60.0
size_flags_horizontal = 3
theme = ExtResource( 5 )
text = "SETTINGS_SFX_VOLUME"

[node name="SFX" type="HSlider" parent="MarginContainer/ScrollContainer/VBoxContainer/SFXVolumeContainer/MarginContainer/HBoxContainer"]
margin_left = 1014.0
margin_right = 2024.0
margin_bottom = 60.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 7 )
max_value = 1.0
step = 0.02
value = 1.0

[node name="Subtitle3" type="MarginContainer" parent="MarginContainer/ScrollContainer/VBoxContainer"]
margin_top = 556.0
margin_right = 2114.0
margin_bottom = 700.0
custom_constants/margin_right = 20
custom_constants/margin_top = 30
custom_constants/margin_left = 30
custom_constants/margin_bottom = 30

[node name="Label" type="Label" parent="MarginContainer/ScrollContainer/VBoxContainer/Subtitle3"]
modulate = Color( 0.835294, 1, 0.835294, 1 )
margin_left = 30.0
margin_top = 30.0
margin_right = 2094.0
margin_bottom = 114.0
theme = SubResource( 8 )
text = "SETTINGS_SCREEN_INTERFACE"
valign = 1

[node name="LanguageContainer" type="MarginContainer" parent="MarginContainer/ScrollContainer/VBoxContainer"]
margin_top = 704.0
margin_right = 2114.0
margin_bottom = 874.0
custom_constants/margin_right = 15
custom_constants/margin_top = 15
custom_constants/margin_left = 15
custom_constants/margin_bottom = 15

[node name="Panel" type="Panel" parent="MarginContainer/ScrollContainer/VBoxContainer/LanguageContainer"]
margin_left = 15.0
margin_top = 15.0
margin_right = 2099.0
margin_bottom = 155.0
theme = ExtResource( 9 )

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/ScrollContainer/VBoxContainer/LanguageContainer"]
margin_left = 15.0
margin_top = 15.0
margin_right = 2099.0
margin_bottom = 155.0
custom_constants/margin_right = 30
custom_constants/margin_top = 20
custom_constants/margin_left = 30
custom_constants/margin_bottom = 20

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/ScrollContainer/VBoxContainer/LanguageContainer/MarginContainer2"]
margin_left = 30.0
margin_top = 20.0
margin_right = 2054.0
margin_bottom = 120.0

[node name="Label" type="Label" parent="MarginContainer/ScrollContainer/VBoxContainer/LanguageContainer/MarginContainer2/HBoxContainer"]
margin_top = 20.0
margin_right = 1010.0
margin_bottom = 80.0
size_flags_horizontal = 3
theme = ExtResource( 5 )
text = "SETTINGS_LANGUAGE_TITLE"

[node name="OptionButton" type="OptionButton" parent="MarginContainer/ScrollContainer/VBoxContainer/LanguageContainer/MarginContainer2/HBoxContainer"]
margin_left = 1014.0
margin_right = 2024.0
margin_bottom = 100.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "SETTINGS_LANGUAGE_SPANISH"
items = [ "SETTINGS_LANGUAGE_SPANISH", null, false, 0, null, "SETTINGS_LANGUAGE_ENGLISH", null, false, 1, null ]
selected = 0

[node name="Subtitle4" type="MarginContainer" parent="MarginContainer/ScrollContainer/VBoxContainer"]
margin_top = 878.0
margin_right = 2114.0
margin_bottom = 1022.0
custom_constants/margin_right = 20
custom_constants/margin_top = 30
custom_constants/margin_left = 30
custom_constants/margin_bottom = 30

[node name="Label" type="Label" parent="MarginContainer/ScrollContainer/VBoxContainer/Subtitle4"]
modulate = Color( 0.835294, 1, 0.835294, 1 )
margin_left = 30.0
margin_top = 30.0
margin_right = 2094.0
margin_bottom = 114.0
theme = SubResource( 8 )
text = "SETTINGS_SCREEN_WINDOW"
valign = 1

[node name="FullscreenContainer" type="MarginContainer" parent="MarginContainer/ScrollContainer/VBoxContainer"]
margin_top = 1026.0
margin_right = 2114.0
margin_bottom = 1174.0
custom_constants/margin_right = 15
custom_constants/margin_top = 15
custom_constants/margin_left = 15
custom_constants/margin_bottom = 15

[node name="Panel" type="Panel" parent="MarginContainer/ScrollContainer/VBoxContainer/FullscreenContainer"]
margin_left = 15.0
margin_top = 15.0
margin_right = 2099.0
margin_bottom = 133.0
theme = ExtResource( 9 )

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/ScrollContainer/VBoxContainer/FullscreenContainer"]
margin_left = 15.0
margin_top = 15.0
margin_right = 2099.0
margin_bottom = 133.0
custom_constants/margin_right = 30
custom_constants/margin_top = 20
custom_constants/margin_left = 30
custom_constants/margin_bottom = 20

[node name="CheckButton" type="CheckButton" parent="MarginContainer/ScrollContainer/VBoxContainer/FullscreenContainer/MarginContainer"]
margin_left = 30.0
margin_top = 20.0
margin_right = 2054.0
margin_bottom = 98.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 7 )
text = "SETTINGS_FULLSCREEN"

[node name="Default" type="MarginContainer" parent="MarginContainer/ScrollContainer/VBoxContainer"]
margin_top = 1178.0
margin_right = 2114.0
margin_bottom = 1408.0
rect_min_size = Vector2( 0, 230 )
theme = ExtResource( 8 )
custom_constants/margin_right = 30
custom_constants/margin_top = 30
custom_constants/margin_left = 30
custom_constants/margin_bottom = 30

[node name="DefaultSettings" type="Button" parent="MarginContainer/ScrollContainer/VBoxContainer/Default"]
margin_left = 30.0
margin_top = 30.0
margin_right = 2084.0
margin_bottom = 200.0
text = "SETTING_BACK_DEFAULT"

[node name="ControlsMargin" type="MarginContainer" parent="."]
margin_top = 910.0
margin_right = 2131.0
margin_bottom = 1000.0
custom_constants/margin_top = 15
custom_constants/margin_bottom = 15

[node name="Controls" type="HBoxContainer" parent="ControlsMargin"]
margin_top = 15.0
margin_right = 2131.0
margin_bottom = 75.0
alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="ControlsMargin/Controls"]
margin_right = 798.0
margin_bottom = 60.0
custom_constants/margin_right = 35
custom_constants/margin_left = 35

[node name="HBoxContainer" type="HBoxContainer" parent="ControlsMargin/Controls/MarginContainer"]
margin_left = 35.0
margin_right = 763.0
margin_bottom = 60.0

[node name="TextureRect3" type="TextureRect" parent="ControlsMargin/Controls/MarginContainer/HBoxContainer"]
margin_right = 212.0
margin_bottom = 60.0
texture = ExtResource( 3 )

[node name="Label" type="Label" parent="ControlsMargin/Controls/MarginContainer/HBoxContainer"]
margin_left = 216.0
margin_top = 2.0
margin_right = 728.0
margin_bottom = 57.0
theme = SubResource( 4 )
text = "MOVE_BUTTON_WORD"

[node name="MarginContainer2" type="MarginContainer" parent="ControlsMargin/Controls"]
margin_left = 802.0
margin_right = 1494.0
margin_bottom = 60.0
custom_constants/margin_right = 35
custom_constants/margin_left = 35

[node name="HBoxContainer" type="HBoxContainer" parent="ControlsMargin/Controls/MarginContainer2"]
margin_left = 35.0
margin_right = 657.0
margin_bottom = 60.0

[node name="TextureRect3" type="TextureRect" parent="ControlsMargin/Controls/MarginContainer2/HBoxContainer"]
margin_right = 60.0
margin_bottom = 60.0
texture = ExtResource( 2 )

[node name="Label" type="Label" parent="ControlsMargin/Controls/MarginContainer2/HBoxContainer"]
margin_left = 64.0
margin_top = 2.0
margin_right = 622.0
margin_bottom = 57.0
theme = SubResource( 4 )
text = "SELECT_BUTTON_WORD"

[node name="MarginContainer3" type="MarginContainer" parent="ControlsMargin/Controls"]
margin_left = 1498.0
margin_right = 2131.0
margin_bottom = 60.0
custom_constants/margin_right = 35
custom_constants/margin_left = 35

[node name="HBoxContainer" type="HBoxContainer" parent="ControlsMargin/Controls/MarginContainer3"]
margin_left = 35.0
margin_right = 598.0
margin_bottom = 60.0

[node name="TextureRect3" type="TextureRect" parent="ControlsMargin/Controls/MarginContainer3/HBoxContainer"]
margin_right = 50.0
margin_bottom = 60.0
texture = ExtResource( 1 )

[node name="Label" type="Label" parent="ControlsMargin/Controls/MarginContainer3/HBoxContainer"]
margin_left = 54.0
margin_top = 2.0
margin_right = 563.0
margin_bottom = 57.0
theme = SubResource( 4 )
text = "BACK_BUTTON_WORD"

[connection signal="focus_entered" from="MarginContainer/ScrollContainer/VBoxContainer/Subtitle/Label" to="." method="_on_button_focus_entered"]
[connection signal="focus_entered" from="MarginContainer/ScrollContainer/VBoxContainer/GeneralVolumeContainer/MarginContainer/HBoxContainer/General" to="." method="_on_button_focus_entered"]
[connection signal="value_changed" from="MarginContainer/ScrollContainer/VBoxContainer/GeneralVolumeContainer/MarginContainer/HBoxContainer/General" to="." method="_on_General_value_changed"]
[connection signal="focus_entered" from="MarginContainer/ScrollContainer/VBoxContainer/MusicVolumeContainer/MarginContainer/HBoxContainer/Music" to="." method="_on_button_focus_entered"]
[connection signal="value_changed" from="MarginContainer/ScrollContainer/VBoxContainer/MusicVolumeContainer/MarginContainer/HBoxContainer/Music" to="." method="_on_Music_value_changed"]
[connection signal="focus_entered" from="MarginContainer/ScrollContainer/VBoxContainer/SFXVolumeContainer/MarginContainer/HBoxContainer/SFX" to="." method="_on_button_focus_entered"]
[connection signal="value_changed" from="MarginContainer/ScrollContainer/VBoxContainer/SFXVolumeContainer/MarginContainer/HBoxContainer/SFX" to="." method="_on_SFX_value_changed"]
[connection signal="focus_entered" from="MarginContainer/ScrollContainer/VBoxContainer/LanguageContainer/MarginContainer2/HBoxContainer/OptionButton" to="." method="_on_button_focus_entered"]
[connection signal="item_selected" from="MarginContainer/ScrollContainer/VBoxContainer/LanguageContainer/MarginContainer2/HBoxContainer/OptionButton" to="." method="_on_OptionButton_item_selected"]
[connection signal="pressed" from="MarginContainer/ScrollContainer/VBoxContainer/LanguageContainer/MarginContainer2/HBoxContainer/OptionButton" to="." method="_on_OptionButton_pressed"]
[connection signal="focus_entered" from="MarginContainer/ScrollContainer/VBoxContainer/FullscreenContainer/MarginContainer/CheckButton" to="." method="_on_button_focus_entered"]
[connection signal="toggled" from="MarginContainer/ScrollContainer/VBoxContainer/FullscreenContainer/MarginContainer/CheckButton" to="." method="_on_CheckButton_toggled"]
[connection signal="focus_entered" from="MarginContainer/ScrollContainer/VBoxContainer/Default/DefaultSettings" to="." method="_on_button_focus_entered"]
[connection signal="pressed" from="MarginContainer/ScrollContainer/VBoxContainer/Default/DefaultSettings" to="." method="_on_DefaultSettings_pressed"]
